Fri Aug  7 13:21:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_Connector_exec.cpp:
          Use the safer set_session_context as now generated by TAO_IDL

Fri Aug  7 12:57:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_Container_Impl.cpp:
          Fixed typo in debug statements

        * ciao/Containers/Session/Session_Container.cpp:
          Improved debug statements

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_Connector_exec.cpp:
        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_Connector_exec.h:
          Use CCM_DDS::DataReader directly, saves an indirection step

        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_Connector_exec.cpp:
          Added some comments

        * connectors/dds4ccm/impl/ndds/DataWriter.h:
          Get the DDSDataWriter from the global scope

Fri Aug  7 11:44:30 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * ciao/Containers/Servant_Activator.h:
        * ciao/Containers/Servant_Activator.cpp:
        * ciao/Servants/Servant_Impl_Base.cpp:

          Re-implemented the servant activator to address a crash at
          teardown.

Fri Aug  7 11:11:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Servant_Impl_Base.cpp:
          Some more defensive programming and pluged a memory leak

Thu Aug  6 15:32:19 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * ciao/Servants/Home_Servant_Impl_T.h:
        * ciao/Servants/Home_Servant_Impl_T.cpp:

          Second part of fix for
          Thu Aug  6 01:46:32 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>,
          now bug 3725.  Homes how keep an increasing serial counter of the home
          instances they create, and append this number to the instance ID passed
          to the component servant when it is instantiated.
