@@ -1,3 +1,12 @@
+Fri Aug  7 13:50:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
+          Use ACE_NEW_NORETURN in the get entry point method so that we only
+          have one exit point
+
+        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_Connector_exec.cpp:
+          Comment out the multiwriter code, just for testing
+
 Fri Aug  7 13:21:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_Connector_exec.cpp:
